# button

./: .gitignore  sdkconfig
components/button/: CMakeLists.txt  button.c
components/button/include/: button.h
components/cJSON_validator/: CMakeLists.txt  cJSON_validator.c
components/cJSON_validator/include/: cJSON_validator.h
components/http/: CMakeLists.txt  http.c
components/http/include/: http.h
components/http/resources/: action.html  home.html  index.html  script.js  styles.css
components/powerbutton/: CMakeLists.txt  powerbutton.c
components/powerbutton/include/: powerbutton.h
components/storage/: CMakeLists.txt  storage.c
components/storage/include/: storage.h
components/wifi/: CMakeLists.txt  wifi.c
components/wifi/include/: wifi.h
main/: main.c
ui/: index.html  styles.css
